--- a/Manuscript.html
+++ b/Manuscript.html
@@ -11,7 +11,7 @@
 <meta name="author" content="Francisco Zangrando">
 <meta name="author" content="Angelica Tivoli">
 <meta name="author" content="Ivan Briz-Godino">
-<meta name="dcterms.date" content="2024-06-24">
+<meta name="dcterms.date" content="2024-06-27">
 <meta name="keywords" content="Sclerochronology, Limpets, Elemental Ratio, Mg/Ca">
 
 <title>Interspecies comparisons of Mg/Ca ratios in limpet shells</title>
@@ -157,7 +157,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">June 24, 2024</p>
+      <p class="date">June 27, 2024</p>
     </div>
   </div>
   
@@ -462,17 +462,49 @@ Figure&nbsp;3: Isotope values of <em>Patella vulgata</em> limpet shells from Quo
 <h1>Results</h1>
 <section id="patella-vulgata" class="level2">
 <h2 class="anchored" data-anchor-id="patella-vulgata"><em>Patella vulgata</em></h2>
-<ul>
-<li>Show one or a few of the LIBS maps as well as the line scans.</li>
-<li>Show one the line scans together with isotope data.</li>
-<li>Show correlation graphs.</li>
-</ul>
+<p>The elemental imaging of <em>P. vulgata</em> shells consistently showed repeating patterns of Mg/Ca intensity ratio changes with high Mg/Ca intensity ratios indicating and low ratios indicating low temperature periods. As examples, <a href="#fig-Pat_LIBS" class="quarto-xref">Figure&nbsp;4</a> shows the 2D-distribution of elemental ratios across the entire section of ORK-LT5 and the preserved anterior side of QG1-7188-1 (additional maps can be found in the supplementaries). The repeating patterns are found across the calcitic layers that are exterior to the myostracum (layers m+2 and m+3) as well as the layers that are interior (m-2) <span class="citation" data-cites="Fenger2007-gf">(<a href="#ref-Fenger2007-gf" role="doc-biblioref">Fenger et al. 2007</a>)</span>. The layer m-1, which is also interior, consists of aragonite and is seen in <a href="#fig-Pat_LIBS" class="quarto-xref">Figure&nbsp;4</a> in grey, as its Mg/Ca intensity ratio consistently falls below the range of interest (0.2 and above). Compared to other patelloid shells, whose interior is almost entirely made of aragonite, this layer is very thin.</p>
 <div class="cell">
 <div class="cell-output-display">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Manuscript_files/figure-html/Patella_Correlation_Graphs-1.png" class="img-fluid figure-img" width="1440"></p>
-<figcaption>Correlation graphs for <em>Patella vulgata</em> specimens</figcaption>
+<div id="fig-Pat_LIBS" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Pat_LIBS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Pat_LIBS-1.png" class="img-fluid figure-img" width="1440">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Pat_LIBS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;4: Example LIBS maps and line scans of analysed specimens. (<em>a+b</em>) ORK-LT and (<em>c</em>+<em>d</em>) QG1-7188-1. Note that the ranges of Mg/Ca intensity ratios are not identical but are chosen arbitrarily to increase contrast. Areas in grey consist of low-Mg aragonite and fall outside the chosen colour-range.
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<p>Both specimens in <a href="#fig-Pat_LIBS" class="quarto-xref">Figure&nbsp;4</a> show increased Mg/Ca intensity ratios towards the outside of the shell and some degree of intra-increment variability. This is particularly visible in <a href="#fig-Pat_LIBS" class="quarto-xref">Figure&nbsp;4</a> c, where Mg/Ca intensity ratios range from ~0.5–0.7 in the first year of growth (9–12 mm on the y-axis). A similar pattern is visible in the interior m-2 layer of ORK-LT5 (<a href="#fig-Pat_LIBS" class="quarto-xref">Figure&nbsp;4</a> a), which increase towards the anterior of the shell (0–10 mm on the x-axis).</p>
+<p>Line scans also indicate well the quasi-sinusoidal change of Mg/Ca intensity ratios expected based on the stable isotope data and elemental-imaging. That said, some of the variability of Mg/Ca intensity ratios within one season such as the summer period of QG1-7188-1 between 0.5 and 2.0 mm distance to the shell edge (@fig-Pat_LIBS d), is visible in a more dramatic manner than it appears in the 2D-image, showing the downside of line-scanning as opposed to the broader milling approach used for the analysis of carbonate powder <span class="citation" data-cites="Ferguson2011-zl">(<a href="#ref-Ferguson2011-zl" role="doc-biblioref">Ferguson et al. 2011</a>)</span>.</p>
+<p><a href="#fig-Pat_Comp" class="quarto-xref">Figure&nbsp;5</a> shows the line scan of ORK-LT5 in comparison to its δ<sup>18</sup>O-values (similar graphs for other specimen can be found in the supplementaries). The measurements of the distance to the shell edge are not entirely identical, most likely because one growth increment can have several different distances. Depending on where one measures the distance and a line scan towards the interior would be shorter than a line scan towards the exterior. That said, increases and decreases of both proxies seem to mirror each other and to be well aligned.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-Pat_Comp" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Pat_Comp-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Pat_Comp-1.png" class="img-fluid figure-img" width="1920">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Pat_Comp-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;5: Comparison of LIBS line-scan and sequential δ<sup>18</sup>O-values of specimen ORK-LT5
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<p>Aligning the records programmatically using dynamic time warping, allowed us to compare them directly to determine specimen-specific equations and quantify the correlation of both proxies (<a href="#fig-Pat_Corr" class="quarto-xref">Figure&nbsp;6</a>). The equations for all specimens are different but the majority (barring one: QG1-7246-1) do seem to cluster around shared parameters (δ<sup>18</sup>Ο = 0.6 – 0.065 * Mg/Ca). The various coefficients of determination (R<sup>2</sup>) range between 0.81 (QG1-7246-1) and 0.95 (QG1-7189-2). These specimens are also the oldest and youngest, respectively, specimens, suggesting that lower growth rates and time averaging had a negative effect on the correlation of both proxies. The mean R<sup>2</sup> value is 0.89, suggesting a generally good fit between the two proxies.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-Pat_Corr" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Pat_Corr-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Pat_Corr-1.png" class="img-fluid figure-img" width="1440">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Pat_Corr-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;6: Correlation graphs for <em>Patella vulgata</em> specimens.
+</figcaption>
 </figure>
 </div>
 </div>
@@ -480,12 +512,49 @@ Figure&nbsp;3: Isotope values of <em>Patella vulgata</em> limpet shells from Quo
 </section>
 <section id="nacella-sp." class="level2">
 <h2 class="anchored" data-anchor-id="nacella-sp."><em>Nacella</em> sp.</h2>
+<p>The LIBS data for <em>Nacella</em> sp. specimens is less straightforward with shells being much thinner and thus patterns being more difficult to make out. Both specimens (ND-1016-3 and NM-1016-3) shown as example in <a href="#fig-Nac_LIBS" class="quarto-xref">Figure&nbsp;7</a> (see additional graphs in supplementaries) also experience increases of Mg/Ca intensity ratio towards the exterior of the shell, similar to the <em>P. vulgata</em> specimens from Orkney. This intra-increment heterogeneity combined with the thinness of the shell, further complicates their analysis compared to <em>P. vulgata</em> or other <em>Patella</em> species <span class="citation" data-cites="Hausmann2019-fi">(<a href="#ref-Hausmann2019-fi" role="doc-biblioref">N. Hausmann et al. 2019</a>)</span>. Nevertheless, repeating patterns were visible in the anterior section of the shell, which were also mirrored in the inner layers (m-2) of specimens NM-1016-3 (<a href="#fig-Nac_LIBS" class="quarto-xref">Figure&nbsp;7</a> c).</p>
 <div class="cell">
 <div class="cell-output-display">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="Manuscript_files/figure-html/Nacella_Correlation_Graphs-1.png" class="img-fluid figure-img" width="1440"></p>
-<figcaption>Correlation graphs for <em>Nacella</em> sp. specimens</figcaption>
+<div id="fig-Nac_LIBS" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Nac_LIBS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Nac_LIBS-1.png" class="img-fluid figure-img" width="1440">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Nac_LIBS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;7: Example LIBS maps and line scans of analysed specimens. (<em>a+b</em>) ND-1016-3 and (<em>c</em>+<em>d</em>) NM-1016-3. Note that the ranges of Mg/Ca intensity ratios are not identical but are chosen arbitrarily to increase contrast. Areas in grey consist of low-Mg aragonite and fall outside the chosen colour-range. Note the inset in (<em>c</em>) where the shell edge has been resampled using a higher resolution (50 µm instead of 100 µm) to better understand the Mg/Ca ratios at the shell edge.
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<p>Interestingly, the Mg/Ca intensity ratios in the <em>Nacella</em> sp. shells were much lower (0.05–0.30) than those seen in other patelloid species (e.g.&nbsp;0.3–0.7 in <em>Patella vulgata</em> above, or 0.5–1.5 in ) using the same emission lines. This is particularly visible in <a href="#fig-Nac_LIBS" class="quarto-xref">Figure&nbsp;7</a> c, where Mg/Ca intensity ratios range from ~0.5–0.7 in <span class="citation" data-cites="Hausmann2023-ih">(<a href="#ref-Hausmann2023-ih" role="doc-biblioref">Niklas Hausmann et al. 2023</a>)</span>). While the intensity ratio depends chiefly on the chosen emission lines to calculate the proportion of the chosen Magnesium to the Calcium peak, the low ratios still indicate lower concentrations than seen elsewhere, or seen only in aragonitic parts of e.g.&nbsp;<em>Patella</em> shells.</p>
+<p>Line scans reflect well the changes previously indicated by δ<sup>18</sup>O values and also indicate about two years of recorded growth. That said, the 2D imaging suggests that in both specimens a third summer can be added to the total record, which is not captured by the line scans. The variability seen in the <em>P. vulgata</em> specimens above is not as strong, which might also be related to the fast and consistent growth rate of the shells.</p>
+<p><a href="#fig-Nac_Comp" class="quarto-xref">Figure&nbsp;8</a> shows the line scans of ND-1016-3 and NM-1016-3 in comparison to their δ<sup>18</sup>O-values (similar graphs for the other <em>Nacella</em> sp. specimen can be found in the supplementaries). Compared to the <em>P. vulgata</em> records, these mirror each other much more clearly, due to the brief period recorded in the shells and its simple make-up.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-Nac_Comp" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Nac_Comp-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Nac_Comp-1.png" class="img-fluid figure-img" width="1920">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Nac_Comp-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;8: Comparison of LIBS line-scan and sequential δ<sup>18</sup>O-values of specimen ORK-LT5
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<p>The <em>Nacella</em> sp. specimens showed similarly clustered correlations, which interestingly were not grouped by species. In fact, specimens ND-1016-3 (<em>Nacella deaureata)</em> and NM-1016-3 (<em>Nacella magellanica</em>) are almost identical in their fitted equations (<a href="#fig-Nac_Corr" class="quarto-xref">Figure&nbsp;9</a>). Both also share a high coefficient of determination (R<sup>2</sup>) of 0.95 and 0.92 respectively, with the remaining specimens being somewhat lower (R<sup>2</sup> = 0.76 for ND-1016-4 and R<sup>2</sup>=0.84 for NM-1016-3). The mean R<sup>2</sup> value for each <em>Nacella</em> species is 0.86 for <em>Nacella deaureata</em> and 0.88 for <em>Nacella magellanica</em>. Why two specimens of different species are so well aligned is not entirely certain and randomness cannot for now be ruled out. That said, since they both have a high R<sup>2</sup> value, it might just be that they were both minimally affected by factors other than SST, including the sampling location of our line scans.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-Nac_Corr" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Nac_Corr-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Nac_Corr-1.png" class="img-fluid figure-img" width="960">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Nac_Corr-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;9: Correlation graphs for <em>Nacella</em> sp. specimens
+</figcaption>
 </figure>
 </div>
 </div>
@@ -494,6 +563,16 @@ Figure&nbsp;3: Isotope values of <em>Patella vulgata</em> limpet shells from Quo
 </section>
 <section id="discussion" class="level1">
 <h1>Discussion</h1>
+<p>The Mg/Ca ratios from the 2D elemental imaging present positive results on SST being the main factor behind Mg/Ca concentration in three Atlantic limpet species. Annually repeating patterns of increasing (spring/summer) and decreasing (autum/winter) SST were also visible in the line scans, albeit less straightforward than in the 2D-data. Nevertheless, the resulting R<sup>2</sup>-values for each species were high (<em>P. vulgata mean R<sup>2</sup></em>=0.89, <em>N. deaureata mean R<sup>2</sup></em>=0.86<em>, N. magellanica mean R<sup>2</sup></em>=0.88).</p>
+<p>These results are similar to previously published data on <em>Patella</em> sp. shells (<a href="#tbl-other_corrs" class="quarto-xref">Table&nbsp;1</a>)</p>
+<p>Also the elemental imaging provided some insight into elemental anomalies along the increments, that introduce intra-incremental heterogeneity and that cannot be reconciled with modern SST changes or SST changes recorded in the δ<sup>18</sup>O of the same shells.</p>
+<p>Why different? Libs can avoid funny bits of shells or interpret them when they occur</p>
+<p>what happened elsewhere?</p>
+<ul>
+<li><p>Ferguson did it before but had other correlations (add mine?)</p></li>
+<li><p>Graniero correlations not available because no data</p></li>
+<li></li>
+</ul>
 <section id="other-correlations" class="level2">
 <h2 class="anchored" data-anchor-id="other-correlations">Other correlations</h2>
 <div class="cell">
@@ -505,6 +584,16 @@ Figure&nbsp;3: Isotope values of <em>Patella vulgata</em> limpet shells from Quo
 </figure>
 </div>
 </div>
+</div>
+<div id="tbl-other_corrs" class="cell quarto-float anchored">
+<figure class="quarto-float quarto-float-tbl figure">
+<figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-other_corrs-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Table&nbsp;1: Table showing correlations of Mg/Ca and δ<sup>18</sup>O found in other studies.
+</figcaption>
+<div aria-describedby="tbl-other_corrs-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+
+</div>
+</figure>
 </div>
 <table class="table">
 <caption>Table 2: Overview of comparative correlations {#tab:correlations}</caption>
@@ -751,21 +840,11 @@ Figure&nbsp;3: Isotope values of <em>Patella vulgata</em> limpet shells from Quo
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="Manuscript_files/figure-html/unnamed-chunk-1-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
 <p><img src="Manuscript_files/figure-html/subsample-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
-<!--# Maybe get the actual data from the image itself. -->
 </section>
 </section>
 <section id="references" class="level1 unnumbered">
